# Monreality-Bot

./: Cargo.toml  Dockerfile  config.toml
.github/workflows/: publish.yaml  shuttle_deploy.yml
src/: commands.rs  lib.rs  main.rs  services.rs  settings.rs
