[package]
name = "profanity-filter-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.28.2"

poise = "0.5.5"
shuttle-runtime = "0.35.0"
shuttle-poise = "0.35.0"
shuttle-secrets = "0.35.0"
shuttle-persist = "0.35.1"

chrono = { version = "0.4.31", features = ["serde"] }

rand = "0.8.5"

anyhow = "1.0.71"
tracing = "0.1.37"
