[package]
name = "profanity-filter-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
poise = "0.5.5"

tracing = "0.1.37"
dotenv = "0.15.0"
config = "0.13.4"
rand = "0.8.5"

lazy_static = "1.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }

redis = { version = "^0", features = ["r2d2"] }
r2d2 = { version = "^0" }

anyhow = "1.0.71"
