[package]
name = "montreality-bot"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
poise = "^0.6"

tracing = "0.1.37"
dotenv = "0.15.0"
config = "^0"
rand = "0.8.5"

chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }

redis = { version = "^0", features = ["r2d2"] }
r2d2 = { version = "^0" }

anyhow = "^1.0"
